10-Oct-2002
Problems fixed:
    1. Window.open was implemented with parameters backwards in 8-Oct-2002 build
    2. Window.opener property was not returning undefined value for non-top-level windows in 8-Oct-2002 build

Additions:
    1. Added support for Window.parent
    2. Added support for Window.<subframe-name>
    3. Added WebWindow.getOpenedWindow() to return a window by its name.

 9-Oct-2002
Acknowledgements:
    Thanks to Richard Harris for adding stubs for various unimplemented JavaScript Window properties.
Additions:
    1. Added support for the following JavaScript Window properties: frames, name, opener, top
    2. Added do-nothing stubs for the Window properties and functions: closed, close(), moveTo(), focus(), setTimeout()
Problems fixed:
    1. ServletUnit was not supporting mappings for the default servlet.

 8-Oct-2002
Acknowledgements:
    Thanks to Richard Harris for adding support for the title attribute for links,
           for adding the JavaScript Navigator.platform property,
           for adding Javascript support for the Screen object,
           for pointing out the value of retaining the same ScriptingEngine instance for a ScriptableDelegate.

Additions:
    1. Links, forms, and images now have a readable title property.
    2. The navigator object now supports the readable 'platform' property.
    3. The screen object is now supported, with properties availHeight and availWidth
    4. The Window.open function is now supported

Problems fixed:
    1. When not using Latin-1 encoding, URL string characters *, _, and - were improperly being encoded
    2. AuthorizationRequiredException was being thrown even when exceptions on error status was disabled
    3. Repeated requests for the same JavaScript domain objects returned new and different instances, thus
       preventing identity tests.


 4-Oct-2002
Additions:
    1. WebClient now supports a WebWindowListener which will be called when a new window is opened.

 3-Oct-2002