@@ -19,6 +19,9 @@ Additions:
     1. Added support for Window.parent
     2. Added support for Window.<subframe-name>
     3. Added WebWindow.getOpenedWindow() to return a window by its name.
+    4. You may now close a window by calling window.close(). This will trigger any active listeners. If the window closed
+       the main window, another window will be promoted to that status.
+    5. Added support for Window.close() and Window.closed
 
  9-Oct-2002
 Acknowledgements:
